test/elaboration/bad/typeclass_instance_missing_member.mle
class H 'a { x : 'a; y : 'a }
instance H int { x = 42 }